Change intro message

--- a/candidatos/templates/index.html
+++ b/candidatos/templates/index.html
@@ -7,7 +7,7 @@
         <h1 class="page-header">Podemos Murcia
             <small>Candidaturas</small>
         </h1>
-        <p>Candidatos y candidatas a la lista plural, abierta y participativa para la secretar&iacute;a general y el consejo ciudadano de Podemos en el municipio de Murcia.</p>
+        <p>Candidatos y candidatas para la secretar&iacute;a general y el consejo ciudadano de Podemos en el municipio de Murcia.</p>
     </div>
 </div>
 
