Change author and put image link for facebook

--- a/candidatos/templates/base.html
+++ b/candidatos/templates/base.html
@@ -9,7 +9,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Candidatos Podemos Murcia">
-    <meta name="author" content="Pedro Luis Lopez">
+    <meta name="author" content="Podemos Murcia">
 
     <title>Candidatos Podemos Murcia{% block title %}{% endblock %}</title>
 
