--- a/candidatos/templates/base.html
+++ b/candidatos/templates/base.html
@@ -8,10 +8,10 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Candidatos Podemos Murcia">
+    <meta name="description" content="{% block description %}Candidatos y candidatas Podemos Murcia{% endblock %}">
     <meta name="author" content="Podemos Murcia">
 
-    <title>Candidatos Podemos Murcia{% block title %}{% endblock %}</title>
+    <title>Candidatos y candidatas Podemos Murcia{% block title %}{% endblock %}</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="{% static "css/bootstrap.min.css" %}" rel="stylesheet">
