--- a/candidatos/templates/index.html
+++ b/candidatos/templates/index.html
@@ -18,7 +18,7 @@
     {% for c in candidatos_sg %}
     <div class="col-lg-4 col-sm-6 text-center">
         <img class="img-circle img-responsive img-center" src="{{ c.get_imagen }}" alt="">
-        <h3><a href="{% url "candidato" c.id %}">{{ c.user.first_name }} {{ c.user.last_name }}</a></h3>
+        <h3><a href="{% url "candidato" c.user.username %}">{{ c.user.first_name }} {{ c.user.last_name }}</a></h3>
         <p>{{ c.motivacion }}</p>
     </div>
     {% empty %}
@@ -35,7 +35,7 @@
     {% for c in candidatos_cc %}
     <div class="col-lg-4 col-sm-6 text-center">
         <img class="img-circle img-responsive img-center" src="{{ c.get_imagen }}" alt="">
-        <h3><a href="{% url "candidato" c.id %}">{{ c.user.first_name }} {{ c.user.last_name }}</a></h3>
+        <h3><a href="{% url "candidato" c.user.username %}">{{ c.user.first_name }} {{ c.user.last_name }}</a></h3>
         <p>{{ c.motivacion }}</p>
     </div>
     {% empty %}
