Change styles and allow multiple select

--- a/candidatos/templates/index.html
+++ b/candidatos/templates/index.html
@@ -4,10 +4,10 @@
 <!-- Introduction Row -->
 <div class="row">
     <div class="col-lg-12">
-        <h1 class="page-header">Podemos Murcia
+        <h1 class="page-header">Ahora Podemos Murcia
             <small>Candidaturas</small>
         </h1>
-        <p>Candidatos y candidatas para la secretar&iacute;a general y el consejo ciudadano de Podemos en el municipio de Murcia.</p>
+        <p>Candidatos y candidatas para la secretar&iacute;a general y el consejo ciudadano de Ahora Podemos Murcia, candidatura para Podemos en el municipio de Murcia.</p>
     </div>
 </div>
 
