--- a/candidatos/templates/base.html
+++ b/candidatos/templates/base.html
@@ -8,10 +8,10 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="{% block description %}Candidatos y candidatas Podemos Murcia{% endblock %}">
-    <meta name="author" content="Podemos Murcia">
+    <meta name="description" content="{% block description %}Candidatos y candidatas de Ahora Podemos Murcia{% endblock %}">
+    <meta name="author" content="Ahora Podemos Murcia">
 
-    <title>Candidatos y candidatas Podemos Murcia{% block title %}{% endblock %}</title>
+    <title>Candidatos y candidatas de Ahora Podemos Murcia{% block title %}{% endblock %}</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="{% static "css/bootstrap.min.css" %}" rel="stylesheet">
@@ -41,7 +41,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="{% url 'index' %}"><img src="{% static "images/podemos-logo.png" %}" alt="Podemos Murcia" /></a>
+                <a class="navbar-brand" href="{% url 'index' %}"><img src="{% static "images/ahora-podemos-murcia.png" %}" alt="Ahora Podemos Murcia" /></a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -82,7 +82,7 @@
         <footer>
             <div class="row">
                 <div class="col-lg-12">
-                    <p><center>Copyright &copy; Podemos Murcia 2014</center></p>
+                    <p><center>Copyright &copy; Ahora Podemos Murcia 2014</center></p>
                 </div>
                 <!-- /.col-lg-12 -->
             </div>
