--- a/static/css/round-about.css
+++ b/static/css/round-about.css
@@ -17,7 +17,7 @@ footer {
 }
 
 .navbar-inverse {
-  background-color: #612D62;
+  background-color: #551645;
   border-color: #4B234B;
 }
 
@@ -33,11 +33,19 @@ footer {
 .navbar-inverse .navbar-nav > .active > a:hover,
 .navbar-inverse .navbar-nav > .active > a:focus {
   color: #9d9d9d;
-  background-color: #612D62;
+  background-color: #551645;
+}
+
+.navbar-brand {
+    float: left;
+    height: 50px;
+    padding: 0 15px 15px 15px;
+    font-size: 18px;
+    line-height: 20px;
 }
 
 h1, h2, h3 {
-    color: #612D62;
+    color: #551645;
 }
 
 .btn-primary {
@@ -67,7 +75,7 @@ a {
 }
 
 a:hover, a:focus {
-    color: #612D62;
+    color: #551645;
     text-decoration: underline;
 }
 
