--- a/candidatos/templates/base.html
+++ b/candidatos/templates/base.html
@@ -83,6 +83,7 @@
             <div class="row">
                 <div class="col-lg-12">
                     <p><center>Copyright &copy; Ahora Podemos Murcia 2014</center></p>
+                    <p><center>Incidencias enviar correo a <a href="mailto: info@ahorapodemosmurcia.org">info@ahorapodemosmurcia.org</a></center></p>
                 </div>
                 <!-- /.col-lg-12 -->
             </div>
