--- a/candidatos/templates/register.html
+++ b/candidatos/templates/register.html
@@ -23,4 +23,5 @@
 		</div>
 	</div>
 </form>
+<p>* El registro enviar&aacute; un correo con un enlace para confirmar el registro. Revise la carpeta de SPAM si no lo recibe.</p>
 {% endblock %}
