--- a/candidatos/templates/index.html
+++ b/candidatos/templates/index.html
@@ -8,6 +8,7 @@
             <small>Candidaturas</small>
         </h1>
         <p>Candidatos y candidatas de Ahora Podemos Murcia para la secretar&iacute;a general y el consejo ciudadano de Podemos en el municipio de Murcia.</p>
+        <p><strong>IMPORTANTE: los candidatos y candidatas tendr&aacute;n que ser avalados y avaladas en la asamblea que se celebrar&aacute; en el CSA La Higuera el 25 de noviembre a las 20:00. Si no se puede asistir los candidatos y candidatas pueden delegar en otra persona la petici&oacute;n del aval.</strong></p>
     </div>
 </div>
 
