Include link to Agora Voting

--- a/candidatos/templates/index.html
+++ b/candidatos/templates/index.html
@@ -9,7 +9,8 @@
         </h1>
         <p>Candidatos y candidatas de Ahora Podemos Murcia para la secretar&iacute;a general y el consejo ciudadano de Podemos en el municipio de Murcia.</p>
         <p><strong>IMPORTANTE: los candidatos y candidatas tendr&aacute;n que ser avalados y avaladas en la asamblea que se celebrar&aacute; en el CSA La Higuera el 25 de noviembre a las 20:00. Si no se puede asistir los candidatos y candidatas pueden delegar en otra persona la petici&oacute;n del aval.</strong></p>
-        <p>Las votaciones ser&aacute;n a trav&eacute;s de Agora Voting, hay que registrarse e incluirse aqu&acute;: <a target="blank_" href="https://agora.agoravoting.com/ahorapodemosmurcia/primarias-de-ahora-podemos-murcia">https://agora.agoravoting.com/ahorapodemosmurcia/primarias-de-ahora-podemos-murcia</a></p>
+        <p>Las votaciones ser&aacute;n a trav&eacute;s de Agora Voting. Se podrá votar desde el 26 de noviembre a las 8:00 hasta el 27 de noviembre a las 20:00.</p>
+        <p><a href="https://agora.agoravoting.com/ahorapodemosmurcia/primarias-de-ahora-podemos-murcia/election/primarias-de-ahora-podemos-murcia-de-cara-a-conformar-una-candida" target="blank_">Pulsa aqu&iacute; para ir a la votaci&oacute;n</a></p>
     </div>
 </div>
 
