Fix new message of agora

--- a/candidatos/templates/index.html
+++ b/candidatos/templates/index.html
@@ -11,8 +11,8 @@
         <p>Las votaciones ser&aacute;n a trav&eacute;s de Agora Voting. Se podrá votar desde el 26 de noviembre a las 12:00 hasta el 27 de noviembre a las 20:00.</p>
         <p>Se va usar un sistema de voto VUT, por lo que es muy importante en que orden se colocan los candidatos y candidatas. La preferencia es importante a la hora de salir elegidos o no. Si se equivoca en el orden puede desmarcar los candidatos y volverlos a poner en el orden correcto.</p>
         <p>Nota: Si se desea que un secretario o secretaria general si no sale elegido opte al consejo ciudadano, hay que votarlo en ambas fases, tanto para la secretaría como para el consejo.</p>
-        <p><strong><a href="https://agora.agoravoting.com/ahorapodemosmurcia/primarias-de-ahora-podemos-murcia" target="blank_">Antes de votar hay que incluirse en el &aacute; pinchando en este enlace y luego pulsando en "Join the agora"</a></strong></p>
-        <p><strong><a href="https://agora.agoravoting.com/ahorapodemosmurcia/primarias-de-ahora-podemos-murcia/election/primarias-de-ahora-podemos-murcia-para-el-consejo-ciudadano-de-po" target="blank_">Pulsa aqu&iacute; para ir a la votaci&oacute;n</a></strong></p>
+        <p><strong><a href="https://agora.agoravoting.com/ahorapodemosmurcia/primarias-de-ahora-podemos-murcia" target="blank_">Antes de votar hay que incluirse en el &aacute;gora pinchando en este enlace y luego pulsando en "Join the agora".</a></strong></p>
+        <p><strong><a href="https://agora.agoravoting.com/ahorapodemosmurcia/primarias-de-ahora-podemos-murcia/election/primarias-de-ahora-podemos-murcia-para-el-consejo-ciudadano-de-po" target="blank_">Pulsa aqu&iacute; para ir a la votaci&oacute;n.</a></strong></p>
     </div>
 </div>
 
