Cambios par AhPRM

--- a/candidatos/templates/candidato.html
+++ b/candidatos/templates/candidato.html
@@ -7,7 +7,7 @@
 <div class="featurette" id="about">
     <img class="featurette-image img-circle img-responsive pull-right" src="{{ c.get_imagen }}">
     <link rel="image_src" href="{{ c.get_imagen }}">
-    <h1 class="page-header">{{ c.user.first_name }} {{ c.user.last_name }}
+    <h1 class="page-header">{{ c.nombre }} {{ c.apellidos }}
         <small>{{ c.get_candidatura }}</small>
     </h1>
     <h3>Biograf&iacute;a</h3>
