--- a/candidatos/templates/index.html
+++ b/candidatos/templates/index.html
@@ -4,10 +4,10 @@
 <!-- Introduction Row -->
 <div class="row">
     <div class="col-lg-12">
-        <h1 class="page-header">Ahora Podemos Murcia
+        <h1 class="page-header">Ahora Podemos Región de Murcia
             <small>Candidaturas</small>
         </h1>
-        <p>Candidatos y candidatas de Ahora Podemos Murcia para la secretar&iacute;a general y el consejo ciudadano de Podemos en el municipio de Murcia.</p>
+        <p>Candidatos y candidatas de Ahora Podemos Región de Murcia para la secretar&iacute;a general y el consejo ciudadano de Podemos en la Región de Murcia.</p>
     </div>
 </div>
 
@@ -18,7 +18,7 @@
     {% for c in candidatos_sg %}
     <div class="col-lg-4 col-sm-6 text-center">
         <img class="img-circle img-responsive img-center" src="{{ c.get_imagen }}" alt="">
-        <h3><a href="{% url "candidato" c.user.username %}">{{ c.user.first_name }} {{ c.user.last_name }}</a></h3>
+        <h3><a href="{% url "candidato" c.id %}">{{ c.nombre }} {{ c.apellidos }}</a></h3>
         <p>{{ c.get_resumen }}</p>
     </div>
     {% empty %}
@@ -35,7 +35,7 @@
     {% for c in candidatos_cc %}
     <div class="col-lg-4 col-sm-6 text-center">
         <img class="img-circle img-responsive img-center" src="{{ c.get_imagen }}" alt="">
-        <h3><a href="{% url "candidato" c.user.username %}">{{ c.user.first_name }} {{ c.user.last_name }}</a></h3>
+        <h3><a href="{% url "candidato" c.id %}">{{ c.nombre }} {{ c.apellidos }}</a></h3>
         <p>{{ c.get_resumen }}</p>
     </div>
     {% empty %}
