--- a/candidatos/templates/base.html
+++ b/candidatos/templates/base.html
@@ -9,7 +9,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="{% block description %}Candidatos y candidatas de Ahora Podemos Región de Murcia{% endblock %}">
-    <meta name="author" content="Ahora Podemos Murcia">
+    <meta name="author" content="Ahora Podemos Región de Murcia">
 
     <title>Candidatos y candidatas de Ahora Podemos Región de Murcia{% block title %}{% endblock %}</title>
 
@@ -67,7 +67,7 @@
         <footer>
             <div class="row">
                 <div class="col-lg-12">
-                    <p><center>Copyright &copy; Ahora Podemos Murcia 2014</center></p>
+                    <p><center>Copyright &copy; Ahora Podemos Región de Murcia 2014</center></p>
                     <p><center>Incidencias enviar correo a <a href="mailto: info@ahorapodemosmurcia.org">info@ahorapodemosmurcia.org</a></center></p>
                 </div>
                 <!-- /.col-lg-12 -->
